--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pydantic==1.8.2
 requests==2.24.0
 scikit-learn==0.24.2
 shap==0.40.0
-streamlit==1.5.0
+streamlit
 uvicorn==0.17.0.post1
 gunicorn==20.0.4
 xgboost==1.5.2
